Fixed blurry logo

--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -121,7 +121,7 @@ body, html {
 }
 
 .nav-logo {
-    height: 40px;
+    height: 45px;
     width: auto;
     image-rendering: -webkit-optimize-contrast;
     image-rendering: crisp-edges;
